# kitty-rc-rs

./: Cargo.toml  README.md  package.json
.beads/: issues.jsonl
doc/: PLAN-password.md  PLAN-pubkey-db.md  PLAN-registry.md
examples/: test-connectivity.rs  test-encrypted.rs
scripts/: enable-rc.sh
src/: client.rs  command.rs  encryption.rs  error.rs  lib.rs  main.rs  protocol.rs  transport.rs
src/commands/: action.rs  layout.rs  mod.rs  process.rs  style.rs  tab.rs  window.rs
