[package]
name = "kitty-rc"
version = "0.2.0"
edition = "2024"
description = "A Rust library for controlling the kitty terminal emulator via its remote control protocol"
license = "MIT"
repository = "https://github.com/rektide/kitty-rc-rs"
homepage = "https://github.com/rektide/kitty-rc-rs"
documentation = "https://docs.rs/kitty-rc"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
