[package]
name = "kitty-rc"
version = "0.4.0"
edition = "2024"
description = "A Rust library for controlling kitty terminal emulator via its remote control protocol"
license = "MIT"
repository = "https://github.com/rektide/kitty-rc-rs"
homepage = "https://github.com/rektide/kitty-rc-rs"
documentation = "https://docs.rs/kitty-rc"

[[bin]]
name = "list-windows"
path = "src/bin/list_windows.rs"

[[bin]]
name = "kitty-pubkey-db"
path = "src/bin/kitty-pubkey-db.rs"

[dependencies]
aes-gcm = "0.10"
base85 = "2.0"
clap = { version = "4.0", features = ["derive"] }
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.0", features = ["full"] }
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
